@@ -22,29 +22,29 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-package org.spongepowered.vanilla.installer;
+package org.spongepowered.libs;
 
 import com.google.gson.Gson;
 import com.google.gson.stream.JsonReader;
-import org.spongepowered.vanilla.installer.model.sponge.Libraries;
-import org.spongepowered.vanilla.installer.model.sponge.Libraries.Dependency;
-import org.spongepowered.vanilla.installer.model.sponge.SonatypeResponse;
-import org.tinylog.Logger;
+import org.spongepowered.libs.model.Libraries;
+import org.spongepowered.libs.model.SonatypeResponse;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.security.MessageDigest;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
@@ -54,7 +54,16 @@ import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 
 public final class LibraryManager {
+    public static final String SPONGE_NEXUS_DOWNLOAD_URL = "https://repo.spongepowered.org/service/rest/v1/search/assets?sha512=%s&maven.groupId=%s&maven.artifactId=%s&maven.baseVersion=%s&maven.extension=jar";
 
+    // This is the list of repositories we sort artifacts by when retrieving them via the library manager.
+    // The order of which is semi-important as we want to prefer the most authoritative repository for a given
+    // artifact.
+    private static final List<String> PREFERRED_REPOSITORY_ORDER = List.of(
+        "maven-central", "minecraft-proxy", "maven-releases", "maven-snapshots", "google-proxy",
+        "forge-proxy", "neoforge-releases", "neoforge-snapshots", "fabric-proxy");
+
+    private final Logger logger;
     private final boolean checkLibraryHashes;
     private final Path rootDirectory;
     private final URL librariesUrl;
@@ -62,10 +71,11 @@ public final class LibraryManager {
     private final ExecutorService preparationWorker;
     private final Gson gson;
 
-    public LibraryManager(final boolean checkLibraryHashes, final Path rootDirectory, final URL librariesUrl) {
+    public LibraryManager(final Logger logger, final boolean checkLibraryHashes, final Path rootDirectory, final URL librariesUrl) {
+        this.logger = Objects.requireNonNull(logger, "logger");
         this.checkLibraryHashes = checkLibraryHashes;
-        this.rootDirectory = rootDirectory;
-        this.librariesUrl = librariesUrl;
+        this.rootDirectory = Objects.requireNonNull(rootDirectory, "rootDirectory");
+        this.librariesUrl = Objects.requireNonNull(librariesUrl, "librariesUrl");
 
         this.libraries = new LinkedHashMap<>();
         final int availableCpus = Runtime.getRuntime().availableProcessors();
@@ -87,13 +97,12 @@ public final class LibraryManager {
         return Collections.unmodifiableSet(this.libraries.getOrDefault(collection, Collections.emptySet()));
     }
 
-    void addLibrary(final String set, final Library library) {
-        this.libraries.computeIfAbsent(set, $ -> Collections.synchronizedSet(new LinkedHashSet<>())).add(library);
+    public void addLibrary(final String set, final Library library) {
+        this.libraries.computeIfAbsent(set, key -> Collections.synchronizedSet(new LinkedHashSet<>())).add(library);
     }
 
     public void validate() throws Exception {
-        Logger.info("Scanning and verifying libraries in '{}'. Please wait, this may take a moment...",
-            LauncherCommandLine.librariesDirectory.toAbsolutePath());
+        this.logger.info("Scanning and verifying libraries in '{}'. Please wait, this may take a moment...", this.rootDirectory);
 
         final Libraries dependencies;
         try (final JsonReader reader = new JsonReader(new InputStreamReader(this.librariesUrl.openStream(), StandardCharsets.UTF_8))) {
@@ -104,22 +113,22 @@ public final class LibraryManager {
         final Map<String, CompletableFuture<Path>> operations = new HashMap<>();
         final Set<String> failures = ConcurrentHashMap.newKeySet();
 
-        for (final Map.Entry<String, List<Dependency>> setEntry : dependencies.dependencies.entrySet()) {
-            downloadedDeps.put(setEntry.getKey(), this.scheduleDownloads(setEntry.getKey(), setEntry.getValue(), operations, failures));
+        for (final Map.Entry<String, List<Libraries.Dependency>> entry : dependencies.dependencies().entrySet()) {
+            downloadedDeps.put(entry.getKey(), this.scheduleDownloads(entry.getValue(), operations, failures));
         }
 
         CompletableFuture.allOf(operations.values().toArray(new CompletableFuture<?>[0])).handle((result, err) -> {
             if (err != null) {
                 failures.add(err.getMessage());
-                Logger.error(err, "Failed to download library");
+                this.logger.error("Failed to download library", err);
             }
             return result;
         }).join();
 
         if (!failures.isEmpty()) {
-            Logger.error("Failed to download some libraries:");
+            this.logger.error("Failed to download some libraries:");
             for (final String message : failures) {
-                Logger.error(message);
+                this.logger.error(message);
             }
             System.exit(-1);
         }
@@ -128,91 +137,74 @@ public final class LibraryManager {
     }
 
     private Set<Library> scheduleDownloads(
-        final String collection,
-        final List<Dependency> dependencies,
+        final List<Libraries.Dependency> dependencies,
         final Map<String, CompletableFuture<Path>> operations,
         final Set<String> failures
     ) {
         final Set<Library> downloadedDeps = Collections.synchronizedSet(new LinkedHashSet<>(dependencies.size()));
-        for (final Libraries.Dependency dependency : dependencies) {
-            operations.computeIfAbsent(asId(dependency), $ -> AsyncUtils.asyncFailableFuture(() -> {
-                final String groupPath = dependency.group.replace(".", "/");
-                final Path depDirectory =
-                    this.rootDirectory.resolve(groupPath).resolve(dependency.module).resolve(dependency.version);
+        for (final Libraries.Dependency dep : dependencies) {
+            operations.computeIfAbsent(getId(dep), key -> LibraryUtils.asyncFailableFuture(() -> {
+                final String groupPath = dep.group().replace(".", "/");
+                final Path depDirectory = this.rootDirectory.resolve(groupPath).resolve(dep.module()).resolve(dep.version());
                 Files.createDirectories(depDirectory);
-                final Path depFile = depDirectory.resolve(dependency.module + "-" + dependency.version + ".jar");
-                final MessageDigest md5 = MessageDigest.getInstance("MD5");
+                final Path depFile = depDirectory.resolve(dep.module() + "-" + dep.version() + ".jar");
 
                 final boolean checkHashes = this.checkLibraryHashes;
 
                 if (Files.exists(depFile)) {
                     if (!checkHashes) {
-                        Logger.info("Detected existing '{}', skipping hash checks...", depFile);
+                        this.logger.info("Detected existing '{}', skipping hash checks...", depFile);
                         return depFile;
                     }
 
-                    // Pipe the download stream into the file and compute the SHA-1
-                    final byte[] bytes = Files.readAllBytes(depFile);
-                    final String fileMd5 = InstallerUtils.toHexString(md5.digest(bytes));
+                    if (LibraryUtils.validateDigest("SHA-512", dep.sha512(), depFile)) {
+                        this.logger.debug("'{}' verified!", depFile);
+                        return depFile;
+                    }
 
-                    if (dependency.md5.equals(fileMd5)) {
-                        Logger.debug("'{}' verified!", depFile);
-                    } else {
-                        Logger.error("Checksum verification failed: Expected {}, {}. Deleting cached '{}'...",
-                            dependency.md5, fileMd5, depFile);
-                        Files.delete(depFile);
+                    this.logger.error("Checksum verification failed: Expected {}. Deleting cached '{}'...", dep.sha512(), depFile);
+                    Files.delete(depFile);
+                }
 
-                        final SonatypeResponse response = this.getResponseFor(this.gson, dependency);
-
-                        if (response.items.isEmpty()) {
-                            failures.add("No data received from '" + new URL(String.format(Constants.Libraries.SPONGE_NEXUS_DOWNLOAD_URL,
-                                dependency.md5, dependency.group,
-                                dependency.module, dependency.version)) + "'!");
-                            return null;
+                final URL requestUrl = new URI(String.format(LibraryManager.SPONGE_NEXUS_DOWNLOAD_URL,
+                    dep.sha512(), dep.group(), dep.module(), dep.version())).toURL();
+                final SonatypeResponse response = this.getResponseFor(this.gson, requestUrl);
+                if (response.items().isEmpty()) {
+                    failures.add("No data received from '" + requestUrl + "'!");
+                    return null;
+                }
+                // Sort the items based on the preferred repository order
+                final var item = response.items()
+                    .stream()
+                    .min(Comparator.comparingInt(i -> {
+                        if (!PREFERRED_REPOSITORY_ORDER.contains(i.repository())) {
+                            return Integer.MAX_VALUE;
                         }
-                        final SonatypeResponse.Item item = response.items.get(0);
-                        final URL url = item.downloadUrl;
+                        return PREFERRED_REPOSITORY_ORDER.indexOf(i.repository());
+                    }))
+                    .get();
 
-                        InstallerUtils.downloadCheckHash(url, depFile, md5, item.checksum.md5);
-                    }
+                if (checkHashes) {
+                    LibraryUtils.downloadAndVerifyDigest(this.logger, item.downloadUrl(), depFile, "SHA-512", item.checksum().sha512());
                 } else {
-                    final SonatypeResponse response = this.getResponseFor(this.gson, dependency);
-
-                    if (response.items.isEmpty()) {
-                        failures.add("No data received from '" + new URL(String.format(Constants.Libraries.SPONGE_NEXUS_DOWNLOAD_URL,
-                            dependency.md5, dependency.group,
-                            dependency.module, dependency.version)) + "'!");
-                        return null;
-                    }
-
-                    final SonatypeResponse.Item item = response.items.get(0);
-                    final URL url = item.downloadUrl;
-
-                    if (checkHashes) {
-                        InstallerUtils.downloadCheckHash(url, depFile, md5, item.checksum.md5);
-                    } else {
-                        InstallerUtils.download(url, depFile, true);
-                    }
+                    LibraryUtils.download(this.logger, item.downloadUrl(), depFile, true);
                 }
 
                 return depFile;
             }, this.preparationWorker)).whenComplete((res, err) -> {
                 if (res != null) {
-                    downloadedDeps.add(new Library(asId(dependency), res));
+                    downloadedDeps.add(new Library(getId(dep), res));
                 }
             });
         }
         return downloadedDeps;
     }
 
-    private SonatypeResponse getResponseFor(final Gson gson, final Libraries.Dependency dependency) throws IOException {
-        final URL requestUrl = new URL(String.format(Constants.Libraries.SPONGE_NEXUS_DOWNLOAD_URL, dependency.md5, dependency.group,
-            dependency.module, dependency.version));
-
+    private SonatypeResponse getResponseFor(final Gson gson, final URL requestUrl) throws IOException {
         final HttpURLConnection connection = (HttpURLConnection) requestUrl.openConnection();
         connection.setRequestMethod("GET");
         connection.setRequestProperty("Content-Type", "application/json");
-        connection.setRequestProperty("User-Agent", "Sponge-Downloader Minecraft/" + Constants.Libraries.MINECRAFT_VERSION_TARGET);
+        connection.setRequestProperty("User-Agent", "Sponge-Downloader");
 
         connection.connect();
 
@@ -239,14 +231,14 @@ public final class LibraryManager {
         }
 
         if (!successful) {
-            Logger.warn("Failed to shut down library preparation pool in 10 seconds, forcing shutdown now.");
+            this.logger.warn("Failed to shut down library preparation pool in 10 seconds, forcing shutdown now.");
             this.preparationWorker.shutdownNow();
         }
     }
 
     public record Library(String name, Path file) {}
 
-    private static String asId(final Dependency dep) {
-        return dep.group + ':' + dep.module + ':' + dep.version;
+    private static String getId(final Libraries.Dependency dep) {
+        return dep.group() + ':' + dep.module() + ':' + dep.version();
     }
 }
